--- a/notebooks/gre_assist_chatbot.ipynb
+++ b/notebooks/gre_assist_chatbot.ipynb
@@ -2,16 +2,184 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: llama-index in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (0.6.21.post1)\n",
+      "Requirement already satisfied: dataclasses-json in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (0.5.7)\n",
+      "Requirement already satisfied: langchain>=0.0.154 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (0.0.194)\n",
+      "Requirement already satisfied: sqlalchemy>=2.0.15 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (2.0.15)\n",
+      "Requirement already satisfied: numpy in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (1.24.3)\n",
+      "Requirement already satisfied: tenacity<9.0.0,>=8.2.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (8.2.2)\n",
+      "Requirement already satisfied: openai>=0.26.4 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (0.27.2)\n",
+      "Requirement already satisfied: pandas in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (2.0.2)\n",
+      "Requirement already satisfied: urllib3<2 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (1.26.16)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (2023.5.0)\n",
+      "Requirement already satisfied: typing-inspect==0.8.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (0.8.0)\n",
+      "Requirement already satisfied: typing-extensions==4.5.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (4.5.0)\n",
+      "Requirement already satisfied: tiktoken in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (0.4.0)\n",
+      "Requirement already satisfied: mypy-extensions>=0.3.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from typing-inspect==0.8.0->llama-index) (1.0.0)\n",
+      "Requirement already satisfied: PyYAML>=5.4.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from langchain>=0.0.154->llama-index) (6.0)\n",
+      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from langchain>=0.0.154->llama-index) (3.8.4)\n",
+      "Requirement already satisfied: async-timeout<5.0.0,>=4.0.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from langchain>=0.0.154->llama-index) (4.0.2)\n",
+      "Requirement already satisfied: langchainplus-sdk>=0.0.6 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from langchain>=0.0.154->llama-index) (0.0.7)\n",
+      "Requirement already satisfied: numexpr<3.0.0,>=2.8.4 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from langchain>=0.0.154->llama-index) (2.8.4)\n",
+      "Requirement already satisfied: openapi-schema-pydantic<2.0,>=1.2 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from langchain>=0.0.154->llama-index) (1.2.4)\n",
+      "Requirement already satisfied: pydantic<2,>=1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from langchain>=0.0.154->llama-index) (1.10.9)\n",
+      "Requirement already satisfied: requests<3,>=2 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from langchain>=0.0.154->llama-index) (2.28.2)\n",
+      "Requirement already satisfied: marshmallow<4.0.0,>=3.3.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from dataclasses-json->llama-index) (3.19.0)\n",
+      "Requirement already satisfied: marshmallow-enum<2.0.0,>=1.5.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from dataclasses-json->llama-index) (1.5.1)\n",
+      "Requirement already satisfied: tqdm in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from openai>=0.26.4->llama-index) (4.65.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from pandas->llama-index) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from pandas->llama-index) (2023.3)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from pandas->llama-index) (2023.3)\n",
+      "Requirement already satisfied: regex>=2022.1.18 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from tiktoken->llama-index) (2023.6.3)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.154->llama-index) (23.1.0)\n",
+      "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.154->llama-index) (3.1.0)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.154->llama-index) (6.0.4)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.154->llama-index) (1.9.2)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.154->llama-index) (1.3.3)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.154->llama-index) (1.3.1)\n",
+      "Requirement already satisfied: packaging>=17.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from marshmallow<4.0.0,>=3.3.0->dataclasses-json->llama-index) (23.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas->llama-index) (1.16.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from requests<3,>=2->langchain>=0.0.154->llama-index) (3.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from requests<3,>=2->langchain>=0.0.154->llama-index) (2023.5.7)\n",
+      "Requirement already satisfied: azure-core in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (1.27.0)\n",
+      "Requirement already satisfied: requests>=2.18.4 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from azure-core) (2.28.2)\n",
+      "Requirement already satisfied: six>=1.11.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from azure-core) (1.16.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.3.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from azure-core) (4.5.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from requests>=2.18.4->azure-core) (3.1.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from requests>=2.18.4->azure-core) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from requests>=2.18.4->azure-core) (1.26.16)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from requests>=2.18.4->azure-core) (2023.5.7)\n",
+      "Collecting pdf2image\n",
+      "  Using cached pdf2image-1.16.3-py3-none-any.whl (11 kB)\n",
+      "Requirement already satisfied: pillow in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from pdf2image) (9.5.0)\n",
+      "Installing collected packages: pdf2image\n",
+      "Successfully installed pdf2image-1.16.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install llama-index\n",
+    "!pip install azure-core\n",
+    "!pip install pdf2image"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# set text wrapping\n",
+    "from IPython.display import HTML, display\n",
+    "\n",
+    "def set_css():\n",
+    "  display(HTML('''\n",
+    "  <style>\n",
+    "    pre {\n",
+    "        white-space: pre-wrap;\n",
+    "    }\n",
+    "  </style>\n",
+    "  '''))\n",
+    "get_ipython().events.register('pre_run_cell', set_css)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "  <style>\n",
+       "    pre {\n",
+       "        white-space: pre-wrap;\n",
+       "    }\n",
+       "  </style>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.environ['OPENAI_API_KEY'] = \"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\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "  <style>\n",
+       "    pre {\n",
+       "        white-space: pre-wrap;\n",
+       "    }\n",
+       "  </style>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from llama_index import download_loader\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "  <style>\n",
+       "    pre {\n",
+       "        white-space: pre-wrap;\n",
+       "    }\n",
+       "  </style>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import logging\n",
     "import sys\n",
@@ -25,12 +193,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "  <style>\n",
+       "    pre {\n",
+       "        white-space: pre-wrap;\n",
+       "    }\n",
+       "  </style>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# load documents\n",
     "documents = SimpleDirectoryReader('../prep_materials/data').load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "  <style>\n",
+       "    pre {\n",
+       "        white-space: pre-wrap;\n",
+       "    }\n",
+       "  </style>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from llama_index import ServiceContext, GPTVectorStoreIndex\n",
+    "\n",
+    "service_context = ServiceContext.from_defaults(chunk_size=512)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "  <style>\n",
+       "    pre {\n",
+       "        white-space: pre-wrap;\n",
+       "    }\n",
+       "  </style>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:llama_index.token_counter.token_counter:> [build_index_from_nodes] Total LLM token usage: 0 tokens\n",
+      "> [build_index_from_nodes] Total LLM token usage: 0 tokens\n",
+      "INFO:llama_index.token_counter.token_counter:> [build_index_from_nodes] Total embedding token usage: 844 tokens\n",
+      "> [build_index_from_nodes] Total embedding token usage: 844 tokens\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initialize simple vector indices + global vector index\n",
+    "# NOTE: don't run this cell if the indices are already loaded! \n",
+    "cur_index = GPTVectorStoreIndex.from_documents(documents, service_context=service_context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "  <style>\n",
+       "    pre {\n",
+       "        white-space: pre-wrap;\n",
+       "    }\n",
+       "  </style>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:llama_index.token_counter.token_counter:> [build_index_from_nodes] Total LLM token usage: 0 tokens\n",
+      "> [build_index_from_nodes] Total LLM token usage: 0 tokens\n",
+      "INFO:llama_index.token_counter.token_counter:> [build_index_from_nodes] Total embedding token usage: 844 tokens\n",
+      "> [build_index_from_nodes] Total embedding token usage: 844 tokens\n"
+     ]
+    }
+   ],
+   "source": [
+    "global_index = GPTVectorStoreIndex.from_documents(documents, service_context=service_context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "  <style>\n",
+       "    pre {\n",
+       "        white-space: pre-wrap;\n",
+       "    }\n",
+       "  </style>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from llama_index import GPTListIndex, LLMPredictor\n",
+    "from langchain import OpenAI\n",
+    "from llama_index.composability import ComposableGraph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "  <style>\n",
+       "    pre {\n",
+       "        white-space: pre-wrap;\n",
+       "    }\n",
+       "  </style>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# set number of output tokens\n",
+    "llm_predictor = LLMPredictor(llm=OpenAI(temperature=0, max_tokens=512))\n",
+    "service_context = ServiceContext.from_defaults(llm_predictor=llm_predictor)"
    ]
   }
  ],
