--- a/notebooks/gre_assist_chatbot.ipynb
+++ b/notebooks/gre_assist_chatbot.ipynb
@@ -13,10 +13,10 @@
       "Requirement already satisfied: dataclasses-json in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (0.5.7)\n",
       "Requirement already satisfied: langchain>=0.0.154 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (0.0.194)\n",
       "Requirement already satisfied: sqlalchemy>=2.0.15 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (2.0.15)\n",
-      "Requirement already satisfied: numpy in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (1.24.3)\n",
+      "Requirement already satisfied: numpy in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (1.23.5)\n",
       "Requirement already satisfied: tenacity<9.0.0,>=8.2.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (8.2.2)\n",
       "Requirement already satisfied: openai>=0.26.4 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (0.27.2)\n",
-      "Requirement already satisfied: pandas in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (2.0.2)\n",
+      "Requirement already satisfied: pandas in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (1.5.3)\n",
       "Requirement already satisfied: urllib3<2 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (1.26.16)\n",
       "Requirement already satisfied: fsspec>=2023.5.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (2023.5.0)\n",
       "Requirement already satisfied: typing-inspect==0.8.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from llama-index) (0.8.0)\n",
@@ -34,9 +34,8 @@
       "Requirement already satisfied: marshmallow<4.0.0,>=3.3.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from dataclasses-json->llama-index) (3.19.0)\n",
       "Requirement already satisfied: marshmallow-enum<2.0.0,>=1.5.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from dataclasses-json->llama-index) (1.5.1)\n",
       "Requirement already satisfied: tqdm in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from openai>=0.26.4->llama-index) (4.65.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from pandas->llama-index) (2.8.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from pandas->llama-index) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from pandas->llama-index) (2023.3)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from pandas->llama-index) (2023.3)\n",
       "Requirement already satisfied: regex>=2022.1.18 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from tiktoken->llama-index) (2023.6.3)\n",
       "Requirement already satisfied: attrs>=17.3.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.154->llama-index) (23.1.0)\n",
       "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.154->llama-index) (3.1.0)\n",
@@ -45,7 +44,7 @@
       "Requirement already satisfied: frozenlist>=1.1.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.154->llama-index) (1.3.3)\n",
       "Requirement already satisfied: aiosignal>=1.1.2 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain>=0.0.154->llama-index) (1.3.1)\n",
       "Requirement already satisfied: packaging>=17.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from marshmallow<4.0.0,>=3.3.0->dataclasses-json->llama-index) (23.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas->llama-index) (1.16.0)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas->llama-index) (1.16.0)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from requests<3,>=2->langchain>=0.0.154->llama-index) (3.4)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from requests<3,>=2->langchain>=0.0.154->llama-index) (2023.5.7)\n",
       "Requirement already satisfied: azure-core in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (1.27.0)\n",
@@ -56,18 +55,23 @@
       "Requirement already satisfied: idna<4,>=2.5 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from requests>=2.18.4->azure-core) (3.4)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from requests>=2.18.4->azure-core) (1.26.16)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from requests>=2.18.4->azure-core) (2023.5.7)\n",
-      "Collecting pdf2image\n",
-      "  Using cached pdf2image-1.16.3-py3-none-any.whl (11 kB)\n",
+      "Requirement already satisfied: pdf2image in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (1.16.3)\n",
       "Requirement already satisfied: pillow in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from pdf2image) (9.5.0)\n",
-      "Installing collected packages: pdf2image\n",
-      "Successfully installed pdf2image-1.16.3\n"
+      "Requirement already satisfied: boto3 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (1.26.151)\n",
+      "Requirement already satisfied: botocore<1.30.0,>=1.29.151 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from boto3) (1.29.151)\n",
+      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from boto3) (1.0.1)\n",
+      "Requirement already satisfied: s3transfer<0.7.0,>=0.6.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from boto3) (0.6.1)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.151->boto3) (2.8.2)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.151->boto3) (1.26.16)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.30.0,>=1.29.151->boto3) (1.16.0)\n"
      ]
     }
    ],
    "source": [
     "!pip install llama-index\n",
     "!pip install azure-core\n",
-    "!pip install pdf2image"
+    "!pip install pdf2image\n",
+    "!pip install boto3"
    ]
   },
   {
