--- a/notebooks/gre_assist_chatbot.ipynb
+++ b/notebooks/gre_assist_chatbot.ipynb
@@ -145,7 +145,77 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: PyPDF2 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (3.0.1)\n",
-      "Collecting chromadb\n"
+      "Collecting chromadb\n",
+      "  Downloading chromadb-0.3.26-py3-none-any.whl (123 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m123.6/123.6 kB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: pandas>=1.3 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from chromadb) (1.5.3)\n",
+      "Requirement already satisfied: requests>=2.28 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from chromadb) (2.28.2)\n",
+      "Requirement already satisfied: pydantic>=1.9 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from chromadb) (1.10.9)\n",
+      "Collecting hnswlib>=0.7 (from chromadb)\n",
+      "  Using cached hnswlib-0.7.0-cp310-cp310-macosx_11_0_arm64.whl\n",
+      "Collecting clickhouse-connect>=0.5.7 (from chromadb)\n",
+      "  Downloading clickhouse_connect-0.6.2-cp310-cp310-macosx_11_0_arm64.whl (231 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m231.7/231.7 kB\u001b[0m \u001b[31m7.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting duckdb>=0.7.1 (from chromadb)\n",
+      "  Using cached duckdb-0.8.0-cp310-cp310-macosx_11_0_arm64.whl (12.6 MB)\n",
+      "Requirement already satisfied: fastapi>=0.85.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from chromadb) (0.96.0)\n",
+      "Requirement already satisfied: uvicorn[standard]>=0.18.3 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from chromadb) (0.22.0)\n",
+      "Requirement already satisfied: numpy>=1.21.6 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from chromadb) (1.23.5)\n",
+      "Collecting posthog>=2.4.0 (from chromadb)\n",
+      "  Using cached posthog-3.0.1-py2.py3-none-any.whl (37 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.5.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from chromadb) (4.5.0)\n",
+      "Collecting pulsar-client>=3.1.0 (from chromadb)\n",
+      "  Downloading pulsar_client-3.2.0-cp310-cp310-macosx_10_15_universal2.whl (10.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.8/10.8 MB\u001b[0m \u001b[31m29.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[?25hCollecting onnxruntime>=1.14.1 (from chromadb)\n",
+      "  Downloading onnxruntime-1.15.0-cp310-cp310-macosx_11_0_arm64.whl (6.1 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.1/6.1 MB\u001b[0m \u001b[31m29.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: tokenizers>=0.13.2 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from chromadb) (0.13.3)\n",
+      "Requirement already satisfied: tqdm>=4.65.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from chromadb) (4.65.0)\n",
+      "Collecting overrides>=7.3.1 (from chromadb)\n",
+      "  Using cached overrides-7.3.1-py3-none-any.whl (17 kB)\n",
+      "Requirement already satisfied: certifi in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from clickhouse-connect>=0.5.7->chromadb) (2023.5.7)\n",
+      "Requirement already satisfied: urllib3>=1.26 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from clickhouse-connect>=0.5.7->chromadb) (1.26.16)\n",
+      "Requirement already satisfied: pytz in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from clickhouse-connect>=0.5.7->chromadb) (2023.3)\n",
+      "Collecting zstandard (from clickhouse-connect>=0.5.7->chromadb)\n",
+      "  Using cached zstandard-0.21.0-cp310-cp310-macosx_11_0_arm64.whl (364 kB)\n",
+      "Collecting lz4 (from clickhouse-connect>=0.5.7->chromadb)\n",
+      "  Using cached lz4-4.3.2-cp310-cp310-macosx_11_0_arm64.whl (212 kB)\n",
+      "Requirement already satisfied: starlette<0.28.0,>=0.27.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from fastapi>=0.85.1->chromadb) (0.27.0)\n",
+      "Collecting coloredlogs (from onnxruntime>=1.14.1->chromadb)\n",
+      "  Downloading coloredlogs-15.0.1-py2.py3-none-any.whl (46 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m46.0/46.0 kB\u001b[0m \u001b[31m8.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting flatbuffers (from onnxruntime>=1.14.1->chromadb)\n",
+      "  Downloading flatbuffers-23.5.26-py2.py3-none-any.whl (26 kB)\n",
+      "Requirement already satisfied: packaging in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from onnxruntime>=1.14.1->chromadb) (23.1)\n",
+      "Requirement already satisfied: protobuf in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from onnxruntime>=1.14.1->chromadb) (4.23.2)\n",
+      "Requirement already satisfied: sympy in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from onnxruntime>=1.14.1->chromadb) (1.12)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from pandas>=1.3->chromadb) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from posthog>=2.4.0->chromadb) (1.16.0)\n",
+      "Requirement already satisfied: monotonic>=1.5 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from posthog>=2.4.0->chromadb) (1.6)\n",
+      "Requirement already satisfied: backoff>=1.10.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from posthog>=2.4.0->chromadb) (2.2.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from requests>=2.28->chromadb) (3.1.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from requests>=2.28->chromadb) (3.4)\n",
+      "Requirement already satisfied: click>=7.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from uvicorn[standard]>=0.18.3->chromadb) (8.1.3)\n",
+      "Requirement already satisfied: h11>=0.8 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from uvicorn[standard]>=0.18.3->chromadb) (0.14.0)\n",
+      "Collecting httptools>=0.5.0 (from uvicorn[standard]>=0.18.3->chromadb)\n",
+      "  Using cached httptools-0.5.0-cp310-cp310-macosx_10_9_universal2.whl (228 kB)\n",
+      "Requirement already satisfied: python-dotenv>=0.13 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from uvicorn[standard]>=0.18.3->chromadb) (1.0.0)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from uvicorn[standard]>=0.18.3->chromadb) (6.0)\n",
+      "Collecting uvloop!=0.15.0,!=0.15.1,>=0.14.0 (from uvicorn[standard]>=0.18.3->chromadb)\n",
+      "  Using cached uvloop-0.17.0-cp310-cp310-macosx_10_9_universal2.whl (2.1 MB)\n",
+      "Collecting watchfiles>=0.13 (from uvicorn[standard]>=0.18.3->chromadb)\n",
+      "  Using cached watchfiles-0.19.0-cp37-abi3-macosx_11_0_arm64.whl (388 kB)\n",
+      "Requirement already satisfied: websockets>=10.4 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from uvicorn[standard]>=0.18.3->chromadb) (11.0.3)\n",
+      "Requirement already satisfied: anyio<5,>=3.4.0 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from starlette<0.28.0,>=0.27.0->fastapi>=0.85.1->chromadb) (3.7.0)\n",
+      "Collecting humanfriendly>=9.1 (from coloredlogs->onnxruntime>=1.14.1->chromadb)\n",
+      "  Downloading humanfriendly-10.0-py2.py3-none-any.whl (86 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m86.8/86.8 kB\u001b[0m \u001b[31m15.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: mpmath>=0.19 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from sympy->onnxruntime>=1.14.1->chromadb) (1.3.0)\n",
+      "Requirement already satisfied: sniffio>=1.1 in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from anyio<5,>=3.4.0->starlette<0.28.0,>=0.27.0->fastapi>=0.85.1->chromadb) (1.3.0)\n",
+      "Requirement already satisfied: exceptiongroup in /Users/lnshuti/anaconda3/envs/greai/lib/python3.10/site-packages (from anyio<5,>=3.4.0->starlette<0.28.0,>=0.27.0->fastapi>=0.85.1->chromadb) (1.1.1)\n",
+      "Installing collected packages: flatbuffers, duckdb, zstandard, uvloop, pulsar-client, overrides, lz4, humanfriendly, httptools, hnswlib, watchfiles, posthog, coloredlogs, clickhouse-connect, onnxruntime, chromadb\n",
+      "Successfully installed chromadb-0.3.26 clickhouse-connect-0.6.2 coloredlogs-15.0.1 duckdb-0.8.0 flatbuffers-23.5.26 hnswlib-0.7.0 httptools-0.5.0 humanfriendly-10.0 lz4-4.3.2 onnxruntime-1.15.0 overrides-7.3.1 posthog-3.0.1 pulsar-client-3.2.0 uvloop-0.17.0 watchfiles-0.19.0 zstandard-0.21.0\n"
      ]
     }
    ],
@@ -181,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -261,21 +331,15 @@
      "output_type": "display_data"
     },
     {
-     "ename": "ValueError",
-     "evalue": "Could not import chromadb python package. Please install it with `pip install chromadb`.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "File \u001b[0;32m~/anaconda3/envs/greai/lib/python3.10/site-packages/langchain/vectorstores/chroma.py:69\u001b[0m, in \u001b[0;36mChroma.__init__\u001b[0;34m(self, collection_name, embedding_function, persist_directory, client_settings, collection_metadata, client)\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 69\u001b[0m     \u001b[39mimport\u001b[39;00m \u001b[39mchromadb\u001b[39;00m\n\u001b[1;32m     70\u001b[0m     \u001b[39mimport\u001b[39;00m \u001b[39mchromadb\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mconfig\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'chromadb'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m embeddings \u001b[39m=\u001b[39m OpenAIEmbeddings()\n\u001b[0;32m----> 2\u001b[0m vectordb \u001b[39m=\u001b[39m Chroma\u001b[39m.\u001b[39;49mfrom_documents(texts, embeddings)\n",
-      "File \u001b[0;32m~/anaconda3/envs/greai/lib/python3.10/site-packages/langchain/vectorstores/chroma.py:446\u001b[0m, in \u001b[0;36mChroma.from_documents\u001b[0;34m(cls, documents, embedding, ids, collection_name, persist_directory, client_settings, client, **kwargs)\u001b[0m\n\u001b[1;32m    444\u001b[0m texts \u001b[39m=\u001b[39m [doc\u001b[39m.\u001b[39mpage_content \u001b[39mfor\u001b[39;00m doc \u001b[39min\u001b[39;00m documents]\n\u001b[1;32m    445\u001b[0m metadatas \u001b[39m=\u001b[39m [doc\u001b[39m.\u001b[39mmetadata \u001b[39mfor\u001b[39;00m doc \u001b[39min\u001b[39;00m documents]\n\u001b[0;32m--> 446\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39;49m\u001b[39m.\u001b[39;49mfrom_texts(\n\u001b[1;32m    447\u001b[0m     texts\u001b[39m=\u001b[39;49mtexts,\n\u001b[1;32m    448\u001b[0m     embedding\u001b[39m=\u001b[39;49membedding,\n\u001b[1;32m    449\u001b[0m     metadatas\u001b[39m=\u001b[39;49mmetadatas,\n\u001b[1;32m    450\u001b[0m     ids\u001b[39m=\u001b[39;49mids,\n\u001b[1;32m    451\u001b[0m     collection_name\u001b[39m=\u001b[39;49mcollection_name,\n\u001b[1;32m    452\u001b[0m     persist_directory\u001b[39m=\u001b[39;49mpersist_directory,\n\u001b[1;32m    453\u001b[0m     client_settings\u001b[39m=\u001b[39;49mclient_settings,\n\u001b[1;32m    454\u001b[0m     client\u001b[39m=\u001b[39;49mclient,\n\u001b[1;32m    455\u001b[0m )\n",
-      "File \u001b[0;32m~/anaconda3/envs/greai/lib/python3.10/site-packages/langchain/vectorstores/chroma.py:407\u001b[0m, in \u001b[0;36mChroma.from_texts\u001b[0;34m(cls, texts, embedding, metadatas, ids, collection_name, persist_directory, client_settings, client, **kwargs)\u001b[0m\n\u001b[1;32m    377\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[1;32m    378\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfrom_texts\u001b[39m(\n\u001b[1;32m    379\u001b[0m     \u001b[39mcls\u001b[39m: Type[Chroma],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    388\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs: Any,\n\u001b[1;32m    389\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Chroma:\n\u001b[1;32m    390\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Create a Chroma vectorstore from a raw documents.\u001b[39;00m\n\u001b[1;32m    391\u001b[0m \n\u001b[1;32m    392\u001b[0m \u001b[39m    If a persist_directory is specified, the collection will be persisted there.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    405\u001b[0m \u001b[39m        Chroma: Chroma vectorstore.\u001b[39;00m\n\u001b[1;32m    406\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 407\u001b[0m     chroma_collection \u001b[39m=\u001b[39m \u001b[39mcls\u001b[39;49m(\n\u001b[1;32m    408\u001b[0m         collection_name\u001b[39m=\u001b[39;49mcollection_name,\n\u001b[1;32m    409\u001b[0m         embedding_function\u001b[39m=\u001b[39;49membedding,\n\u001b[1;32m    410\u001b[0m         persist_directory\u001b[39m=\u001b[39;49mpersist_directory,\n\u001b[1;32m    411\u001b[0m         client_settings\u001b[39m=\u001b[39;49mclient_settings,\n\u001b[1;32m    412\u001b[0m         client\u001b[39m=\u001b[39;49mclient,\n\u001b[1;32m    413\u001b[0m     )\n\u001b[1;32m    414\u001b[0m     chroma_collection\u001b[39m.\u001b[39madd_texts(texts\u001b[39m=\u001b[39mtexts, metadatas\u001b[39m=\u001b[39mmetadatas, ids\u001b[39m=\u001b[39mids)\n\u001b[1;32m    415\u001b[0m     \u001b[39mreturn\u001b[39;00m chroma_collection\n",
-      "File \u001b[0;32m~/anaconda3/envs/greai/lib/python3.10/site-packages/langchain/vectorstores/chroma.py:72\u001b[0m, in \u001b[0;36mChroma.__init__\u001b[0;34m(self, collection_name, embedding_function, persist_directory, client_settings, collection_metadata, client)\u001b[0m\n\u001b[1;32m     70\u001b[0m     \u001b[39mimport\u001b[39;00m \u001b[39mchromadb\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mconfig\u001b[39;00m\n\u001b[1;32m     71\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mImportError\u001b[39;00m:\n\u001b[0;32m---> 72\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m     73\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mCould not import chromadb python package. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     74\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mPlease install it with `pip install chromadb`.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     75\u001b[0m     )\n\u001b[1;32m     77\u001b[0m \u001b[39mif\u001b[39;00m client \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     78\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_client \u001b[39m=\u001b[39m client\n",
-      "\u001b[0;31mValueError\u001b[0m: Could not import chromadb python package. Please install it with `pip install chromadb`."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:chromadb.telemetry.posthog:Anonymized telemetry enabled. See https://docs.trychroma.com/telemetry for more information.\n",
+      "Anonymized telemetry enabled. See https://docs.trychroma.com/telemetry for more information.\n",
+      "INFO:clickhouse_connect.driver.ctypes:Successfully imported ClickHouse Connect C data optimizations\n",
+      "Successfully imported ClickHouse Connect C data optimizations\n",
+      "INFO:clickhouse_connect.json_impl:Using python library for writing JSON byte strings\n",
+      "Using python library for writing JSON byte strings\n"
      ]
     }
    ],
