Add persistant database

--- a/notebooks/gre_assist_chatbot.ipynb
+++ b/notebooks/gre_assist_chatbot.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -275,12 +275,14 @@
    ],
    "source": [
     "loader = TextLoader('../prep_materials/data/MockTests.pdf', encoding='latin-1')\n",
-    "documents = loader.load()"
+    "documents = loader.load()\n",
+    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=0)\n",
+    "texts = text_splitter.split_documents(documents)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -300,11 +302,27 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:chromadb.telemetry.posthog:Anonymized telemetry enabled. See https://docs.trychroma.com/telemetry for more information.\n",
+      "Anonymized telemetry enabled. See https://docs.trychroma.com/telemetry for more information.\n",
+      "INFO:chromadb.db.duckdb:No existing DB found in db, skipping load\n",
+      "No existing DB found in db, skipping load\n",
+      "INFO:chromadb.db.duckdb:No existing DB found in db, skipping load\n",
+      "No existing DB found in db, skipping load\n"
+     ]
     }
    ],
    "source": [
-    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=0)\n",
-    "texts = text_splitter.split_documents(documents)"
+    "# Embed and store the texts\n",
+    "# Supplying a persist_directory will store the embeddings on disk\n",
+    "persist_directory = 'db'\n",
+    "\n",
+    "embedding = OpenAIEmbeddings()\n",
+    "vectordb = Chroma.from_documents(documents=texts, embedding=embedding, persist_directory=persist_directory)"
    ]
   },
   {
@@ -406,6 +424,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\" I don't know.\""
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
